--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         <activity android:name=".breathingActivity" />
         <activity android:name=".MedicinesActivity" />
         <activity android:name=".sportWheel" />
-        <activity android:name=".set_medicine"></activity>
+        <activity android:name=".set_medicine" />
+        <activity android:name=".NutritionActivity" />
+        <activity android:name=".addNutrition"></activity>
     </application>
 
 </manifest>
