--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".breathingActivity" />
         <activity android:name=".MedicinesActivity" />
         <activity android:name=".sportWheel" />
-        <activity android:name=".set_medicine" />
+        <activity android:name=".set_medicine"
+            android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".NutritionActivity" />
         <activity android:name=".addNutrition" />
         <activity android:name=".ContactsActivity" />
