--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,14 +29,16 @@
         <activity android:name=".breathingActivity" />
         <activity android:name=".MedicinesActivity" />
         <activity android:name=".sportWheel" />
-        <activity android:name=".set_medicine"
-            android:windowSoftInputMode="adjustResize"/>
+        <activity
+            android:name=".set_medicine"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".NutritionActivity" />
         <activity android:name=".addNutrition" />
         <activity android:name=".ContactsActivity" />
         <activity android:name=".welcomeActivity" />
-        <activity android:name=".FeedActivity"></activity>
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".FeedActivity" />
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".stepCounter"></activity>
     </application>
 
 </manifest>
