--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".FeedActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".stepCounter"></activity>
+        <service android:name=".StepsCounterService"/>
     </application>
 
 </manifest>
